--- a/SEG3125-Module1-Survey/index.html
+++ b/SEG3125-Module1-Survey/index.html
@@ -4,23 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script> -->
     <title>Survey Module 1 Lab</title>
   </head>
   <body>
     <div class="flexed flex-column flex-items-center">
-      <h1>Survey</h1>
-      <p>Evaluating the UI for <a href="https://medium.com/">Medium</a></p>
+      <h1 id="topHeading">Survey</h1>
+      <p id="topHeadingSubtitle">Evaluating the UI for <a href="https://medium.com/">Medium</a></p>
     </div>
     <div class="card">
       <div class="body flexed flex-content-center flex-wrap">
@@ -34,17 +23,21 @@
         </div>
         <div>
           <form>
-            <div style="padding: .5rem;">
+            <div style="padding: .5rem;" id="personal">
+              <h4 class="options-headings">
+                Personal information
+              </h4>
               <div class="flexed flex-content-between padding-25rem">
-                <div>First Name</div>
+                <label>First Name</label>
                 <input class="input-group" type="text" />
               </div>
               <div class="flexed flex-content-between padding-25rem">
-                <div>Last Name</div>
+                <label>Last Name</label>
                 <input class="input-group" type="text" />
               </div>
             </div>
-            <div>
+            <!-- <div class="separator"></div> -->
+            <div id="optionsStuff">
               <div class="padding-25rem">
                 <h4 class="options-headings">
                   How often do you use Medium for information
@@ -154,35 +147,45 @@
                 </div>
               </div>
             </div>
-            <div class="padding-25rem">
-              <div>What have you used Medium for:</div>
-              <select class="mb-3" aria-label="Medium Selection Dropdown">
-                <option selected>Design</option>
-                <option value="1">Education</option>
-                <option value="2">Writing</option>
-                <option value="3">Technology</option>
-                <option value="4">Social Media</option>
-              </select>
+            <!-- <div class="separator"></div> -->
+            <div class="padding-10px" id="mediumTypes">
+              <div class="padding-25rem">
+                <h4 class="options-headings">
+                  What have you used Medium for:
+                </h4>
+                <select class="mb-3" id="dropdown" aria-label="Medium Selection Dropdown">
+                  <option selected>Design</option>
+                  <option value="1">Education</option>
+                  <option value="2">Writing</option>
+                  <option value="3">Technology</option>
+                  <option value="4">Social Media</option>
+                </select>
+              </div>
             </div>
-            <div class="padding-25rem">
-              <div class="options-headings">Additional Comments</div>
-              <textarea
-                name="comments"
-                class="input-group"
-                id="comments"
-                cols="30"
-                rows="10"
-              ></textarea>
+            <!-- <div class="separator"></div> -->
+            <div id="comments">
+              <div class="padding-25rem">
+                <h4 class="options-headings">
+                  Additional Comments
+                </h4>
+                <textarea
+                  name="comments"
+                  id="comments"
+                  cols="30"
+                  rows="10"
+                ></textarea>
+              </div>
             </div>
-            <div class="padding-25rem">
+            <!-- <div class="separator"></div> -->
+            <div class="padding-10px">
               <button type="button">Submit the Survey</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-    <footer class="flexed flex-content-center p-3 alert-info">
-      <div class="fw-bold">Website designed by 'Some Unknown Creator'</div>
+    <footer class="flexed flex-content-center alert-info">
+      <div id="bold-weight">Website designed by 'Some Unknown Creator'</div>
     </footer>
     <script src="main.js" defer></script>
   </body>
