--- a/SEG3125-Module3-AltGrocery/index.html
+++ b/SEG3125-Module3-AltGrocery/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Module 2 Grocery Store</title>
+    <title>Module 3 Alt Grocery Store</title>
   </head>
   <body>
     <header>
