--- a/SEG3125-Module4-HealthService/index.html
+++ b/SEG3125-Module4-HealthService/index.html
@@ -109,19 +109,17 @@
                   class="bi bi-question-circle"
                   data-bs-toggle="tooltip"
                   data-bs-placement="top"
-                  title="Images and descriptions from Google"
+                  title="Click on the buttons for descriptions"
                 ></i>
               </div>
             </div>
           </div>
-          <div class="d-flex gap-2 btn btn-primary p-1">
+          <a class="d-flex gap-2 btn btn-primary p-1 text-decoration-none" href="#appointment">
             <i class="bi bi-calendar-plus-fill"></i>
             <div>
-              <a class="text-decoration-none text-white" href="#appointment"
-                >Book Appointment</a
-              >
+              <div class="text-white">Book Appointment</div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="container mt-2 pb-1 pt-1">
           <div
@@ -541,14 +539,6 @@
         >
           <div class="d-flex align-items-center gap-2 fs-5 fw-bold">
             <div>Appointments</div>
-            <div class="d-flex align-items-center">
-              <i
-                class="bi bi-question-circle"
-                data-bs-toggle="tooltip"
-                data-bs-placement="top"
-                title="This site is not for the real clinic at this location"
-              ></i>
-            </div>
           </div>
         </div>
         <div class="container pt-1 pb-1">
