--- a/SEG3125-Module6-HealthService/index.html
+++ b/SEG3125-Module6-HealthService/index.html
@@ -638,7 +638,7 @@
             </div>
             <div class="stepper-body mb-3">
               <div id="appointmentSection" class="active-view">
-                <div class="col-md-4">
+                <div class="col-4 col-12">
                   <div
                     id="oneContainer"
                     class="d-flex p-0 m-0 justify-content-between text-danger"
@@ -669,7 +669,7 @@
                     </select>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-4 col-12">
                   <div id="twoContainer" class="p-0 m-0 text-danger">
                     <div id="dateError" class="d-none"></div>
                   </div>
@@ -689,7 +689,7 @@
                     </select>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-4 col-12">
                   <div id="timeError" class="d-none text-danger">
                     Choose a valid time slot
                   </div>
@@ -700,7 +700,7 @@
                     </select>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-4 col-12">
                   <div
                     id="threeContainer"
                     class="d-flex p-0 m-0 justify-content-between text-danger"
@@ -724,7 +724,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-4 col-12">
                   <div id="fourContainer" class="text-danger">
                     <div id="emailError" class="d-none">Invalid Email</div>
                   </div>
@@ -739,7 +739,7 @@
                     />
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-4 col-12">
                   <div id="fiveContainer" class="text-danger">
                     <div id="phoneError" class="d-none">
                       Invalid Phone Number: Format (111-111-1111)
@@ -786,7 +786,7 @@
                   <div class="alert alert-info p-1 mb-0" id="credit-card-alert">
                     Select a card to enter information
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-4 col-12">
                     <div
                       id="cardContainer"
                       class="d-flex justify-content-between p-0 m-0 text-danger"
@@ -827,7 +827,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-4 col-12">
                     <div id="cvv-error" class="d-none text-danger">
                       Invalid CVV Number
                     </div>
